RESOLVED FIXED277713
Continue with HTTP load after showing HTTPSOnly warning
https://bugs.webkit.org/show_bug.cgi?id=277713
Summary Continue with HTTP load after showing HTTPSOnly warning
Matthew Finkel
Reported 2024-08-06 14:30:20 PDT
Continue with HTTP load after showing HTTPSOnly warning
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-06 14:30:30 PDT
Matthew Finkel
Comment 2 2024-08-06 14:37:00 PDT
EWS
Comment 3 2024-08-07 11:11:26 PDT
Committed 281945@main (e8ddea8b7dbd): <https://commits.webkit.org/281945@main> Reviewed commits have been landed. Closing PR #31810 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.