Continue with HTTP load after showing HTTPSOnly warning https://bugs.webkit.org/show_bug.cgi?id=277713 rdar://133328571

Reviewed by Chris Dumez.

This change recovers from the failed provisional load by starting a new
navigation using HTTP, instead of HTTPS, after the user consents to continuing
with the fallback load.

This requires adjusting the URL scheme and propagating the fallback-state to
the FrameLoader. This change also fixes a bug in the fallback logic, so it
doesn't upgrade the request when we are attempting a fallback load.

* Source/WebCore/loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::requestResource):

Fixes a bug in the upgrade logic so we don't upgrade when we are falling back
to HTTP.

* Source/WebKit/Shared/LoadParameters.h:
* Source/WebKit/Shared/LoadParameters.serialization.in:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::loadRequest):
(WebKit::WebPageProxy::loadRequestWithNavigationShared):
(WebKit::WebPageProxy::didFailProvisionalLoadForFrameShared):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::loadRequest):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/Navigation.mm:
(TEST(WKNavigation, HTTPSOnlyHTTPFallbackContinue)):

Canonical link: https://commits.webkit.org/281945@main